Page freezes with CSS transition duration calc(infinity * 1s) https://bugs.webkit.org/show_bug.cgi?id=321274 rdar://184322389

Reviewed by Sam Weinig.

Ensure we don't enter an infinite loop under `UnitBezier::solveCurveX()` by
enforcing a minimal value for `epsilon` larger than 0.

Test: imported/w3c/web-platform-tests/css/css-transitions/transition-duration-infinite-cancelation.html

* LayoutTests/imported/w3c/web-platform-tests/css/css-transitions/transition-duration-infinite-cancelation-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-transitions/transition-duration-infinite-cancelation.html: Added.
* Source/WebCore/platform/graphics/UnitBezier.h:
(WebCore::UnitBezier::solveCurveX):

Canonical link: https://commits.webkit.org/320034@main